# Demoblaze-Selenium-Automation

./: Dockerfile  README.md  docker-compose-v3.yml  docker-compose.yml  hello.py  index.html  pyproject.toml
.github/workflows/: main.yml
10/history/: duration-trend.json  retry-trend.json
10/widgets/: executors.json  history-trend.json
12/: index.html
12/export/: influxDbData.txt
12/history/: duration-trend.json
12/widgets/: executors.json
13/: index.html
13/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
13/export/: influxDbData.txt  prometheusData.txt
13/history/: history.json  retry-trend.json
13/widgets/: categories-trend.json  duration-trend.json  executors.json  history-trend.json  severity.json  status-chart.json  summary.json
15/: index.html
15/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
15/export/: influxDbData.txt  prometheusData.txt
15/history/: categories-trend.json  duration-trend.json  history-trend.json  (+2 more)
16/: index.html
17/: index.html
18/: index.html
19/: index.html
20/: index.html
21/: index.html
22/: index.html
23/: index.html
24/: index.html
25/: index.html
26/: index.html
27/: index.html
28/: index.html
32/: index.html
33/: index.html
export/: influxDbData.txt
last-history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
tests/: conftest.py  products.json  test_cart.py  test_login.py  test_product_page.py  test_products_page.py
widgets/: environment.json
(+1092 files in other folders)
