[project]
name = "selenium-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "allure-pytest>=2.14.3",
    "mypy>=1.16.0",
    "pytest>=8.3.4",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.6",
    "selenium>=4.28.1",
    "webdriver-manager>=4.0.2",
]
